janet_bindings/src/bindings.rs

unsafe extern "C" {
    pub fn janet_core_env(replacements: *mut JanetTable) -> *mut JanetTable;
}
unsafe extern "C" {
    pub fn janet_core_lookup_table(replacements: *mut JanetTable) -> *mut JanetTable;
}
unsafe extern "C" {
    pub fn janet_dobytes(
        env: *mut JanetTable,
        bytes: *const u8,
        len: i32,
        sourcePath: *const ::std::os::raw::c_char,
        out: *mut Janet,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn janet_dostring(
        env: *mut JanetTable,
        str_: *const ::std::os::raw::c_char,
        sourcePath: *const ::std::os::raw::c_char,
        out: *mut Janet,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn janet_loop_fiber(fiber: *mut JanetFiber) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn janet_scan_number(str_: *const u8, len: i32, out: *mut f64) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn janet_scan_number_base(
        str_: *const u8,
        len: i32,
        base: i32,
        out: *mut f64,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn janet_scan_int64(str_: *const u8, len: i32, out: *mut i64) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn janet_scan_uint64(str_: *const u8, len: i32, out: *mut u64) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn janet_scan_numeric(str_: *const u8, len: i32, out: *mut Janet) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn janet_debug_break(def: *mut JanetFuncDef, pc: i32);
}
unsafe extern "C" {
    pub fn janet_debug_unbreak(def: *mut JanetFuncDef, pc: i32);
}
unsafe extern "C" {
    pub fn janet_debug_find(
        def_out: *mut *mut JanetFuncDef,
        pc_out: *mut i32,
        source: JanetString,
        line: i32,
        column: i32,
    );
}
unsafe extern "C" {
    pub static janet_rng_type: JanetAbstractType;
}
unsafe extern "C" {
    pub fn janet_default_rng() -> *mut JanetRNG;
}
unsafe extern "C" {
    pub fn janet_rng_seed(rng: *mut JanetRNG, seed: u32);
}
unsafe extern "C" {
    pub fn janet_rng_longseed(rng: *mut JanetRNG, bytes: *const u8, len: i32);
}
unsafe extern "C" {
    pub fn janet_rng_u32(rng: *mut JanetRNG) -> u32;
}
unsafe extern "C" {
    pub fn janet_rng_double(rng: *mut JanetRNG) -> f64;
}
unsafe extern "C" {
    pub fn janet_array(capacity: i32) -> *mut JanetArray;
}
unsafe extern "C" {
    pub fn janet_array_weak(capacity: i32) -> *mut JanetArray;
}
unsafe extern "C" {
    pub fn janet_array_n(elements: *const Janet, n: i32) -> *mut JanetArray;
}
unsafe extern "C" {
    pub fn janet_array_ensure(array: *mut JanetArray, capacity: i32, growth: i32);
}
unsafe extern "C" {
    pub fn janet_array_setcount(array: *mut JanetArray, count: i32);
}
unsafe extern "C" {
    pub fn janet_array_push(array: *mut JanetArray, x: Janet);
}
unsafe extern "C" {
    pub fn janet_array_pop(array: *mut JanetArray) -> Janet;
}
unsafe extern "C" {
    pub fn janet_array_peek(array: *mut JanetArray) -> Janet;
}
unsafe extern "C" {
    pub fn janet_buffer(capacity: i32) -> *mut JanetBuffer;
}
unsafe extern "C" {
    pub fn janet_buffer_init(buffer: *mut JanetBuffer, capacity: i32) -> *mut JanetBuffer;
}
unsafe extern "C" {
    pub fn janet_pointer_buffer_unsafe(
        memory: *mut ::std::os::raw::c_void,
        capacity: i32,
        count: i32,
    ) -> *mut JanetBuffer;
}
unsafe extern "C" {
    pub fn janet_buffer_deinit(buffer: *mut JanetBuffer);
}
unsafe extern "C" {
    pub fn janet_buffer_ensure(buffer: *mut JanetBuffer, capacity: i32, growth: i32);
}
unsafe extern "C" {
    pub fn janet_buffer_setcount(buffer: *mut JanetBuffer, count: i32);
}
unsafe extern "C" {
    pub fn janet_buffer_extra(buffer: *mut JanetBuffer, n: i32);
}
unsafe extern "C" {
    pub fn janet_buffer_push_bytes(buffer: *mut JanetBuffer, string: *const u8, len: i32);
}
unsafe extern "C" {
    pub fn janet_buffer_push_string(buffer: *mut JanetBuffer, string: JanetString);
}
unsafe extern "C" {
    pub fn janet_buffer_push_cstring(
        buffer: *mut JanetBuffer,
        cstring: *const ::std::os::raw::c_char,
    );
}
unsafe extern "C" {
    pub fn janet_buffer_push_u8(buffer: *mut JanetBuffer, x: u8);
}
unsafe extern "C" {
    pub fn janet_buffer_push_u16(buffer: *mut JanetBuffer, x: u16);
}
unsafe extern "C" {
    pub fn janet_buffer_push_u32(buffer: *mut JanetBuffer, x: u32);
}
unsafe extern "C" {
    pub fn janet_buffer_push_u64(buffer: *mut JanetBuffer, x: u64);
}
unsafe extern "C" {
    pub fn janet_tuple_begin(length: i32) -> *mut Janet;
}
unsafe extern "C" {
    pub fn janet_tuple_end(tuple: *mut Janet) -> JanetTuple;
}
unsafe extern "C" {
    pub fn janet_tuple_n(values: *const Janet, n: i32) -> JanetTuple;
}
unsafe extern "C" {
    pub fn janet_string_begin(length: i32) -> *mut u8;
}
unsafe extern "C" {
    pub fn janet_string_end(str_: *mut u8) -> JanetString;
}
unsafe extern "C" {
    pub fn janet_string(buf: *const u8, len: i32) -> JanetString;
}
unsafe extern "C" {
    pub fn janet_cstring(cstring: *const ::std::os::raw::c_char) -> JanetString;
}
unsafe extern "C" {
    pub fn janet_string_compare(lhs: JanetString, rhs: JanetString) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn janet_string_equal(lhs: JanetString, rhs: JanetString) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn janet_string_equalconst(
        lhs: JanetString,
        rhs: *const u8,
        rlen: i32,
        rhash: i32,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn janet_description(x: Janet) -> JanetString;
}
unsafe extern "C" {
    pub fn janet_to_string(x: Janet) -> JanetString;
}
unsafe extern "C" {
    pub fn janet_to_string_b(buffer: *mut JanetBuffer, x: Janet);
}
unsafe extern "C" {
    pub fn janet_description_b(buffer: *mut JanetBuffer, x: Janet);
}
unsafe extern "C" {
    pub fn janet_formatc(format: *const ::std::os::raw::c_char, ...) -> JanetString;
}
unsafe extern "C" {
    pub fn janet_formatb(
        bufp: *mut JanetBuffer,
        format: *const ::std::os::raw::c_char,
        ...
    ) -> *mut JanetBuffer;
}
unsafe extern "C" {
    pub fn janet_formatbv(
        bufp: *mut JanetBuffer,
        format: *const ::std::os::raw::c_char,
        args: *mut __va_list_tag,
    );
}
unsafe extern "C" {
    pub fn janet_symbol(str_: *const u8, len: i32) -> JanetSymbol;
}
unsafe extern "C" {
    pub fn janet_csymbol(str_: *const ::std::os::raw::c_char) -> JanetSymbol;
}
unsafe extern "C" {
    pub fn janet_symbol_gen() -> JanetSymbol;
}
unsafe extern "C" {
    pub fn janet_struct_begin(count: i32) -> *mut JanetKV;
}
unsafe extern "C" {
    pub fn janet_struct_put(st: *mut JanetKV, key: Janet, value: Janet);
}
unsafe extern "C" {
    pub fn janet_struct_end(st: *mut JanetKV) -> JanetStruct;
}
unsafe extern "C" {
    pub fn janet_struct_get(st: JanetStruct, key: Janet) -> Janet;
}
unsafe extern "C" {
    pub fn janet_struct_rawget(st: JanetStruct, key: Janet) -> Janet;
}
unsafe extern "C" {
    pub fn janet_struct_get_ex(st: JanetStruct, key: Janet, which: *mut JanetStruct) -> Janet;
}
unsafe extern "C" {
    pub fn janet_struct_to_table(st: JanetStruct) -> *mut JanetTable;
}
unsafe extern "C" {
    pub fn janet_struct_find(st: JanetStruct, key: Janet) -> *const JanetKV;
}
unsafe extern "C" {
    pub fn janet_table(capacity: i32) -> *mut JanetTable;
}
unsafe extern "C" {
    pub fn janet_table_init(table: *mut JanetTable, capacity: i32) -> *mut JanetTable;
}
unsafe extern "C" {
    pub fn janet_table_init_raw(table: *mut JanetTable, capacity: i32) -> *mut JanetTable;
}
unsafe extern "C" {
    pub fn janet_table_deinit(table: *mut JanetTable);
}
unsafe extern "C" {
    pub fn janet_table_get(t: *mut JanetTable, key: Janet) -> Janet;
}
unsafe extern "C" {
    pub fn janet_table_get_ex(t: *mut JanetTable, key: Janet, which: *mut *mut JanetTable)
    -> Janet;
}
unsafe extern "C" {
    pub fn janet_table_rawget(t: *mut JanetTable, key: Janet) -> Janet;
}
unsafe extern "C" {
    pub fn janet_table_remove(t: *mut JanetTable, key: Janet) -> Janet;
}
unsafe extern "C" {
    pub fn janet_table_put(t: *mut JanetTable, key: Janet, value: Janet);
}
unsafe extern "C" {
    pub fn janet_table_to_struct(t: *mut JanetTable) -> JanetStruct;
}
unsafe extern "C" {
    pub fn janet_table_merge_table(table: *mut JanetTable, other: *mut JanetTable);
}
unsafe extern "C" {
    pub fn janet_table_merge_struct(table: *mut JanetTable, other: JanetStruct);
}
unsafe extern "C" {
    pub fn janet_table_find(t: *mut JanetTable, key: Janet) -> *mut JanetKV;
}
unsafe extern "C" {
    pub fn janet_table_clone(table: *mut JanetTable) -> *mut JanetTable;
}
unsafe extern "C" {
    pub fn janet_table_clear(table: *mut JanetTable);
}
unsafe extern "C" {
    pub fn janet_table_weakk(capacity: i32) -> *mut JanetTable;
}
unsafe extern "C" {
    pub fn janet_table_weakv(capacity: i32) -> *mut JanetTable;
}
unsafe extern "C" {
    pub fn janet_table_weakkv(capacity: i32) -> *mut JanetTable;
}
unsafe extern "C" {
    pub fn janet_fiber(
        callee: *mut JanetFunction,
        capacity: i32,
        argc: i32,
        argv: *const Janet,
    ) -> *mut JanetFiber;
}
unsafe extern "C" {
    pub fn janet_fiber_reset(
        fiber: *mut JanetFiber,
        callee: *mut JanetFunction,
        argc: i32,
        argv: *const Janet,
    ) -> *mut JanetFiber;
}
unsafe extern "C" {
    pub fn janet_fiber_status(fiber: *mut JanetFiber) -> JanetFiberStatus;
}
unsafe extern "C" {
    pub fn janet_fiber_can_resume(fiber: *mut JanetFiber) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn janet_current_fiber() -> *mut JanetFiber;
}
unsafe extern "C" {
    pub fn janet_root_fiber() -> *mut JanetFiber;
}
unsafe extern "C" {
    pub fn janet_indexed_view(
        seq: Janet,
        data: *mut *const Janet,
        len: *mut i32,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn janet_bytes_view(
        str_: Janet,
        data: *mut *const u8,
        len: *mut i32,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn janet_dictionary_view(
        tab: Janet,
        data: *mut *const JanetKV,
        len: *mut i32,
        cap: *mut i32,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn janet_dictionary_get(data: *const JanetKV, cap: i32, key: Janet) -> Janet;
}
unsafe extern "C" {
    pub fn janet_dictionary_next(
        kvs: *const JanetKV,
        cap: i32,
        kv: *const JanetKV,
    ) -> *const JanetKV;
}
unsafe extern "C" {
    pub fn janet_abstract_begin(
        type_: *const JanetAbstractType,
        size: usize,
    ) -> *mut ::std::os::raw::c_void;
}
unsafe extern "C" {
    pub fn janet_abstract_end(abstractTemplate: *mut ::std::os::raw::c_void) -> JanetAbstract;
}
unsafe extern "C" {
    pub fn janet_abstract(type_: *const JanetAbstractType, size: usize) -> JanetAbstract;
}
pub type JanetModule = ::std::option::Option<unsafe extern "C" fn(arg1: *mut JanetTable)>;
pub type JanetModconf = ::std::option::Option<unsafe extern "C" fn() -> JanetBuildConfig>;
unsafe extern "C" {
    pub fn janet_native(
        name: *const ::std::os::raw::c_char,
        error: *mut JanetString,
    ) -> JanetModule;
}
unsafe extern "C" {
    pub fn janet_marshal(
        buf: *mut JanetBuffer,
        x: Janet,
        rreg: *mut JanetTable,
        flags: ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn janet_unmarshal(
        bytes: *const u8,
        len: usize,
        flags: ::std::os::raw::c_int,
        reg: *mut JanetTable,
        next: *mut *const u8,
    ) -> Janet;
}
unsafe extern "C" {
    pub fn janet_env_lookup(env: *mut JanetTable) -> *mut JanetTable;
}
unsafe extern "C" {
    pub fn janet_env_lookup_into(
        renv: *mut JanetTable,
        env: *mut JanetTable,
        prefix: *const ::std::os::raw::c_char,
        recurse: ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn janet_mark(x: Janet);
}
unsafe extern "C" {
    pub fn janet_sweep();
}
unsafe extern "C" {
    pub fn janet_collect();
}
